--- a/src/app/modules/collaborators/components/register/register.component.html
+++ b/src/app/modules/collaborators/components/register/register.component.html
@@ -1,29 +1,31 @@
 
-<form *ngIf="form" [formGroup]="form">
-  <mat-form-field appearance="fill">
+<form *ngIf="form" [formGroup]="form" class="row">
+  <mat-form-field appearance="fill" class="col-xs-12 col-sm-6">
     <mat-label>Nome</mat-label>
     <input matInput formControlName="name">
   </mat-form-field>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" class="col-xs-12 col-sm-6">
     <mat-label>E-mail</mat-label>
     <input matInput formControlName="email">
   </mat-form-field>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" class="col-xs-12 col-sm-6">
     <mat-label>Foto</mat-label>
     <input matInput formControlName="photo_url">
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" class="col-xs-12 col-sm-6">
     <mat-label>Data de admissão</mat-label>
     <input matInput [matDatepicker]="picker" formControlName="admission_date">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" class="col-xs-12 col-sm-6">
     <mat-label>Cargo</mat-label>
     <input matInput formControlName="job_title">
   </mat-form-field>
 
-  <button mat-raised-button color="primary" (click)="save()">Save</button>
+  <div class="col-xs-12 form-controls">
+    <button mat-raised-button color="primary" (click)="save()">Salvar</button>
+  </div>
 </form>
