--- a/src/app/modules/collaborators/components/table/table.component.html
+++ b/src/app/modules/collaborators/components/table/table.component.html
@@ -1,34 +1,63 @@
 
-<div class="container">
-  <header class="collaborators-header">
-    <mat-form-field appearance="outline">
-      <mat-label>Search</mat-label>
-      <input matInput placeholder="Type to search...">
-      <mat-icon matSuffix>search</mat-icon>
-      <mat-hint>Type the user name</mat-hint>
-    </mat-form-field>
+<header class="collaborators-header">
+  <mat-form-field appearance="outline">
+    <mat-label>Search</mat-label>
+    <input matInput placeholder="Type to search..." (keyup)="applyFilter($event.target.value)">
+    <mat-icon matSuffix>search</mat-icon>
+    <mat-hint>Type the user name</mat-hint>
+  </mat-form-field>
 
-    <a
-      [routerLink]="[registerRoute]"
-      mat-raised-button
-      color="primary">
-      Criar
-    </a>
-  </header>
+  <a
+    [routerLink]="[registerRoute]"
+    mat-raised-button
+    color="primary"
+    class="btn-create">
+    Criar
+  </a>
+</header>
 
-  <table matSort (matSortChange)="sortCollaborators($event)">
-    <tr>
-      <th mat-sort-header="name">Nome</th>
-      <th mat-sort-header="job_title">Cargo</th>
-      <th mat-sort-header="admission_date">Data de admissão</th>
-      <th mat-sort-header="email">E-mail</th>
-    </tr>
+<div class="row">
+  <div class="col-xs-12 col-md-8 col-lg-9">
+    <div class="row">
+      <div class="collab-table-wrapper col-xs-12">
+        <table mat-table [dataSource]="dataSource" matSort class="collab-table">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="job_title">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Cargo</th>
+            <td mat-cell *matCellDef="let element"> {{element.job_title}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="admission_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Data de admissão</th>
+            <td mat-cell *matCellDef="let element"> {{element.admission_date}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>E-mail</th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="navigateToDetails(row.id)"></tr>
+        </table>
+      </div>
+    
+      <mat-paginator 
+        [pageSize]="8"
+        [pageSizeOptions]="[5, 8, 12]"
+        showFirstLastButtons 
+        aria-label="Select page of periodic elements"
+        class="col-xs-12 end-xs">
+      </mat-paginator>
+    </div>
+  </div>
 
-    <tr *ngFor="let collaborator of sortedCollaborators" (click)="navigateToDetails(collaborator.id)">
-      <td>{{ collaborator.name }}</td>
-      <td>{{ collaborator.job_title }}</td>
-      <td>{{ collaborator.admission_date }}</td>
-      <td>{{ collaborator.email }}</td>
-    </tr>
-  </table>
+  <div class="col-xs-12 col-md-4 col-lg-3">
+    <!-- TODO: show only filtered users comments -->
+    <app-comments *ngFor="let user of collaborators" [userId]="user.id"></app-comments>
+  </div>
 </div>
