--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'src/assets/scss/reset';
 
+html { font-size: 62.5%; }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+.container {
+  display: block;
+  width: 100%;
+  max-width: 128rem;
+  margin: 0 auto;
+  padding: 0 2rem;
+  box-sizing: border-box;
+}
+.form-controls {
+  display: flex;
+  justify-content: center;
+  .mat-button-base {
+    margin: 0 1rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .form-controls {
+    justify-content: space-between;
+    .mat-button-base {
+      margin: 0;
+    }
+  }
+}
