feat: alerts and UI/Performance improvement

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
               <mat-icon matSuffix>home</mat-icon>
             </a>
           </li>
-          <li><a [routerLink]="['']" class="header-nav-link">Colaboradores</a></li>
+          <li class="header-nav-list-item"><a [routerLink]="['']" class="header-nav-link">Colaboradores</a></li>
         </ul>
       </nav>
     </div>
