--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,13 +1,17 @@
 @import 'src/assets/scss/variables';
 
 .app-header {
-  padding: 1.5rem 0;
+  padding: 1rem 0;
+  background: white;
+  margin-bottom: 2rem;
+  box-shadow: 0px 1px 3px 0px rgb(0 0 0 / 12%);
   .header-nav {
     &-list {
       text-align: right;
       &-item {
         display: inline-block;
         color: $primary;
+        vertical-align: middle;
         &:first-child {
           float: left;
         }
