--- a/src/app/modules/collaborators/components/table/table.component.html
+++ b/src/app/modules/collaborators/components/table/table.component.html
@@ -4,7 +4,6 @@
     <mat-label>Search</mat-label>
     <input matInput placeholder="Type to search..." (keyup)="applyFilter($event.target.value)">
     <mat-icon matSuffix>search</mat-icon>
-    <mat-hint>Type the user name</mat-hint>
   </mat-form-field>
 
   <a
@@ -19,8 +18,8 @@
 <div class="row">
   <div class="col-xs-12 col-md-8 col-lg-9">
     <div class="row">
-      <div class="collab-table-wrapper col-xs-12">
-        <table mat-table [dataSource]="dataSource" matSort class="collab-table">
+      <div class="collab-table-wrapper">
+        <table mat-table [dataSource]="dataSource" matSort class="collab-table col-xs-12">
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -57,7 +56,9 @@
   </div>
 
   <div class="col-xs-12 col-md-4 col-lg-3">
-    <!-- TODO: show only filtered users comments -->
-    <app-comments *ngFor="let user of collaborators" [userId]="user.id"></app-comments>
+    <mat-card class="comments-title">
+      <mat-card-title>Comentários</mat-card-title>
+    </mat-card>
+    <app-comments *ngFor="let user of consideredCommentAuthors" [userId]="user.id"></app-comments>
   </div>
 </div>
