--- a/src/app/modules/shared/components/comments/comments.component.html
+++ b/src/app/modules/shared/components/comments/comments.component.html
@@ -1,8 +1,15 @@
 
 <mat-card *ngFor="let comment of comments" class="comment">
-  <mat-card-title>{{ comment.user?.name }}</mat-card-title>
-  <mat-card-subtitle>{{ comment.user?.job_title }}</mat-card-subtitle>
   <mat-card-content>
     <p>{{ comment.value }}</p>
   </mat-card-content>
 </mat-card>
+
+<ng-container *ngIf="showVoidMessage && !comments.length && !loading">
+  <mat-card class="no-comments">
+    <mat-card-content>
+      <mat-icon matSuffix>sentiment_very_dissatisfied</mat-icon>
+      <p>Este usuário ainda não realizou nenhum comentário</p>
+    </mat-card-content>
+  </mat-card>
+</ng-container>
