--- a/src/app/modules/shared/components/comments/comments.component.scss
+++ b/src/app/modules/shared/components/comments/comments.component.scss
@@ -1,4 +1,13 @@
+@import 'src/assets/scss/variables';
 
 .comment {
   margin-bottom: 1.5rem;
+}
+
+.no-comments {
+  text-align: center;
+  .mat-icon {
+    color: $primary;
+    font-size: 4rem;
+  }
 }
