refactor: code improvement

--- a/src/app/modules/collaborators/components/register/register.component.html
+++ b/src/app/modules/collaborators/components/register/register.component.html
@@ -26,6 +26,6 @@
   </mat-form-field>
 
   <div class="col-xs-12 form-controls">
-    <button mat-raised-button color="primary" (click)="save()">Salvar</button>
+    <button mat-raised-button color="primary" (click)="save()" class="btn-save">Salvar</button>
   </div>
 </form>
