--- a/src/app/modules/collaborators/components/details/details.component.html
+++ b/src/app/modules/collaborators/components/details/details.component.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="collaborator" class="row">
-  <mat-card class="col-xs-12 col-md-8">
+  <mat-card class="col-xs-12 col-md-8 collab-card">
     <div class="row">
       <div class="col-xs-12">
         <img mat-card-avatar src="{{ collaborator.photo_url }}">
@@ -22,9 +22,9 @@
       <div class="col-xs-12 comment-form">
         <mat-form-field appearance="outline">
           <mat-label>Comment</mat-label>
-          <textarea #commentField matInput placeholder="Type your comment..."></textarea>
+          <textarea #commentField matInput placeholder="Type your comment..." class="comment-field"></textarea>
         </mat-form-field>
-        
+
         <button
           mat-mini-fab
           (click)="sendComment(commentField.value)"
@@ -35,11 +35,15 @@
       </div>
     </div>
   </mat-card>
-  
+
   <div class="col-xs-12 col-md-4">
     <mat-card class="comments-title">
       <mat-card-title>Comentários</mat-card-title>
     </mat-card>
-    <app-comments [userId]="collaborator.id" [showVoidMessage]="true" [$updateSubject]="$updateComments"></app-comments>
+    <app-comments
+      [userId]="collaborator.id"
+      [showVoidMessage]="true"
+      [$updateSubject]="$updateComments">
+    </app-comments>
   </div>
 </div>
