--- a/src/app/modules/collaborators/components/edit/edit.component.html
+++ b/src/app/modules/collaborators/components/edit/edit.component.html
@@ -26,7 +26,7 @@
   </mat-form-field>
 
   <div class="col-xs-12 form-controls">
-    <button mat-raised-button color="primary" (click)="update()">Salvar</button>
+    <button mat-raised-button color="primary" (click)="update()" class="btn-save">Salvar</button>
     <button mat-raised-button (click)="navigateToDetails()">Cancelar</button>
   </div>
 </form>
