--- a/src/app/modules/collaborators/components/table/table.component.html
+++ b/src/app/modules/collaborators/components/table/table.component.html
@@ -2,7 +2,12 @@
 <header class="collaborators-header">
   <mat-form-field appearance="outline">
     <mat-label>Search</mat-label>
-    <input matInput placeholder="Type to search..." (keyup)="applyFilter($event.target.value)">
+    <input
+      matInput
+      placeholder="Type to search..."
+      class="search-input"
+      (keyup)="applyFilter($event.target.value)"
+    >
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
 
@@ -24,31 +29,31 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
-      
+
           <ng-container matColumnDef="job_title">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Cargo</th>
             <td mat-cell *matCellDef="let element"> {{element.job_title}} </td>
           </ng-container>
-      
+
           <ng-container matColumnDef="admission_date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Data de admissão</th>
             <td mat-cell *matCellDef="let element"> {{element.admission_date}} </td>
           </ng-container>
-      
+
           <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>E-mail</th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
-      
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="navigateToDetails(row.id)"></tr>
         </table>
       </div>
-    
-      <mat-paginator 
+
+      <mat-paginator
         [pageSize]="8"
         [pageSizeOptions]="[5, 8, 12]"
-        showFirstLastButtons 
+        showFirstLastButtons
         aria-label="Select page of periodic elements"
         class="col-xs-12 end-xs">
       </mat-paginator>
